--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
+    
     <title>Lipink Parcel Cirebon - Parcel Lebaran, Natal, Imlek Terbaik</title>
-    <meta name="description" content="Parcel premium Cirebon untuk Lebaran, Natal, dan Imlek. Banyak pilihan parcel makanan berkualitas dan keramik cantik. Pesan sekarang!" />
-    <meta name="keywords" content="parcel cirebon, parcel lebaran, parcel natal, parcel imlek, hampers cirebon, parcel makanan, parcel keramik" />
+    <meta name="description" content="Parcel premium Cirebon untuk Lebaran, Natal, dan Imlek. Banyak pilihan parcel makanan berkualitas dan keramik cantik." />
+    <meta name="keywords" content="parcel cirebon, parcel lebaran, parcel natal, parcel imlek, hampers cirebon" />
 
-    <meta property="og:title" content="Lipink Parcel Cirebon - Parcel Lebaran, Natal, Imlek Terbaik" />
-    <meta property="og:description" content="Parcel premium Cirebon untuk Lebaran, Natal, dan Imlek. Banyak pilihan parcel makanan berkualitas dan keramik cantik. Pesan sekarang!" />
+    <meta property="og:title" content="Lipink Parcel Cirebon" />
+    <meta property="og:description" content="Pusat Parcel & Hampers Terlengkap di Cirebon." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://images.unsplash.com/photo-1513475382585-d06e58bcb0e0?w=800&h=600&fit=crop" />
+    <meta property="og:image" content="/og-image.png" /> 
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Lipink Parcel Cirebon - Parcel Lebaran, Natal, Imlek Terbaik" />
-    <meta name="twitter:image" content="https://images.unsplash.com/photo-1513475382585-d06e58bcb0e0?w=800&h=600&fit=crop" />
+    <meta name="twitter:title" content="Lipink Parcel Cirebon" />
+    <meta name="twitter:description" content="Pusat Parcel & Hampers Terlengkap di Cirebon." />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
