improve seo using SSR(1)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Primary SEO Meta Tags (Fallback - Overridden by React Helmet) -->
     <title>Lipink Parcel Cirebon - Parcel Lebaran, Natal, Imlek Terbaik</title>
     <meta name="title" content="Lipink Parcel Cirebon - Parcel Lebaran, Natal, Imlek Terbaik" />
-    <meta name="description" content="Toko parcel terbaik di Cirebon untuk Lebaran, Natal, dan Imlek. Pengalaman 6+ tahun melayani hampers berkualitas dengan harga terjangkau. Gratis ongkir area Cirebon!" />
+    <meta name="description" content="Beli parcel Lebaran, Natal & Imlek di Lipink Cirebon. Harga mulai Rp50.000, kualitas premium. 6+ tahun pengalaman, gratis ongkir Cirebon. Pesan sekarang via WhatsApp!" />
     <meta name="keywords" content="parcel cirebon, hampers cirebon, parcel lebaran, parcel natal, parcel imlek, toko parcel cirebon, hampers lebaran, hampers natal, hampers imlek, parcel murah cirebon" />
     <meta name="author" content="Lipink Parcel Cirebon" />
     <meta name="robots" content="index, follow" />
@@ -28,7 +28,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.parcelcirebon.com/" />
     <meta property="og:title" content="Lipink Parcel Cirebon - Parcel Lebaran, Natal, Imlek Terbaik" />
-    <meta property="og:description" content="Toko parcel terbaik di Cirebon untuk Lebaran, Natal, dan Imlek. Pengalaman 6+ tahun melayani hampers berkualitas dengan harga terjangkau." />
+    <meta property="og:description" content="Beli parcel Lebaran, Natal & Imlek di Lipink Cirebon. Harga mulai Rp50.000, kualitas premium. Gratis ongkir Cirebon!" />
     <meta property="og:image" content="https://www.parcelcirebon.com/og-image.png" />
     <meta property="og:locale" content="id_ID" />
     <meta property="og:site_name" content="Lipink Parcel Cirebon" />
@@ -37,7 +37,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://www.parcelcirebon.com/" />
     <meta name="twitter:title" content="Lipink Parcel Cirebon - Parcel Lebaran, Natal, Imlek Terbaik" />
-    <meta name="twitter:description" content="Toko parcel terbaik di Cirebon untuk Lebaran, Natal, dan Imlek. Pengalaman 6+ tahun melayani hampers berkualitas." />
+    <meta name="twitter:description" content="Beli parcel Lebaran, Natal & Imlek di Lipink Cirebon. Harga mulai Rp50.000, kualitas premium. Gratis ongkir Cirebon!" />
     <meta name="twitter:image" content="https://www.parcelcirebon.com/og-image.png" />
 
     <!-- Geo Tags for Local SEO -->
@@ -67,9 +67,9 @@
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "Lipink Parcel Cirebon",
-      "description": "Toko parcel terbaik di Cirebon untuk Lebaran, Natal, dan Imlek. Pengalaman 6+ tahun melayani hampers berkualitas.",
+      "description": "Beli parcel Lebaran, Natal & Imlek di Lipink Cirebon. Harga mulai Rp50.000, kualitas premium. 6+ tahun pengalaman, gratis ongkir Cirebon.",
       "url": "https://www.parcelcirebon.com",
-      "telephone": "+6281234567890",
+      "telephone": "+628122208580",
       "address": {
         "@type": "PostalAddress",
         "addressLocality": "Cirebon",
