Imrpove static HTML for SEO

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Primary SEO Meta Tags (Fallback - Overridden by React Helmet) -->
     <title>Lipink Parcel Cirebon - Parcel Lebaran, Natal, Imlek Terbaik</title>
     <meta name="title" content="Lipink Parcel Cirebon - Parcel Lebaran, Natal, Imlek Terbaik" />
-    <meta name="description" content="Beli parcel Lebaran, Natal & Imlek di Lipink Cirebon. Harga mulai Rp50.000, kualitas premium. 6+ tahun pengalaman, gratis ongkir Cirebon. Pesan sekarang via WhatsApp!" />
+    <meta name="description" content="Beli parcel Lebaran, Natal & Imlek di Lipink Cirebon. Harga mulai Rp50.000, kualitas premium. 6+ tahun pengalaman. Ongkir mulai 25rb, bisa kirim se-Indonesia! Pesan via WhatsApp!" />
     <meta name="keywords" content="parcel cirebon, hampers cirebon, parcel lebaran, parcel natal, parcel imlek, toko parcel cirebon, hampers lebaran, hampers natal, hampers imlek, parcel murah cirebon" />
     <meta name="author" content="Lipink Parcel Cirebon" />
     <meta name="robots" content="index, follow" />
@@ -28,7 +28,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.parcelcirebon.com/" />
     <meta property="og:title" content="Lipink Parcel Cirebon - Parcel Lebaran, Natal, Imlek Terbaik" />
-    <meta property="og:description" content="Beli parcel Lebaran, Natal & Imlek di Lipink Cirebon. Harga mulai Rp50.000, kualitas premium. Gratis ongkir Cirebon!" />
+    <meta property="og:description" content="Beli parcel Lebaran, Natal & Imlek di Lipink Cirebon. Harga mulai Rp50.000, kualitas premium. Ongkir mulai 25rb, bisa kirim se-Indonesia!" />
     <meta property="og:image" content="https://www.parcelcirebon.com/og-image.png" />
     <meta property="og:locale" content="id_ID" />
     <meta property="og:site_name" content="Lipink Parcel Cirebon" />
@@ -37,7 +37,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://www.parcelcirebon.com/" />
     <meta name="twitter:title" content="Lipink Parcel Cirebon - Parcel Lebaran, Natal, Imlek Terbaik" />
-    <meta name="twitter:description" content="Beli parcel Lebaran, Natal & Imlek di Lipink Cirebon. Harga mulai Rp50.000, kualitas premium. Gratis ongkir Cirebon!" />
+    <meta name="twitter:description" content="Beli parcel Lebaran, Natal & Imlek di Lipink Cirebon. Harga mulai Rp50.000, kualitas premium. Ongkir mulai 25rb, bisa kirim se-Indonesia!" />
     <meta name="twitter:image" content="https://www.parcelcirebon.com/og-image.png" />
 
     <!-- Geo Tags for Local SEO -->
@@ -67,13 +67,15 @@
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "Lipink Parcel Cirebon",
-      "description": "Beli parcel Lebaran, Natal & Imlek di Lipink Cirebon. Harga mulai Rp50.000, kualitas premium. 6+ tahun pengalaman, gratis ongkir Cirebon.",
+      "description": "Beli parcel Lebaran, Natal & Imlek di Lipink Cirebon. Harga mulai Rp50.000, kualitas premium. 6+ tahun pengalaman. Ongkir mulai 25rb, bisa kirim se-Indonesia!",
       "url": "https://www.parcelcirebon.com",
       "telephone": "+628122208580",
       "address": {
         "@type": "PostalAddress",
+        "streetAddress": "Jl. Garuda No.4, Pekiringan",
         "addressLocality": "Cirebon",
         "addressRegion": "Jawa Barat",
+        "postalCode": "45131",
         "addressCountry": "ID"
       },
       "geo": {
@@ -82,9 +84,35 @@
         "longitude": "108.5570"
       },
       "openingHours": "Mo-Su 08:00-21:00",
-      "priceRange": "Rp50.000 - Rp500.000",
+      "priceRange": "Rp50.000 - Rp2.000.000",
       "image": "https://www.parcelcirebon.com/og-image.png",
-      "sameAs": []
+      "areaServed": [
+        {"@type": "City", "name": "Cirebon"},
+        {"@type": "City", "name": "Majalengka"},
+        {"@type": "City", "name": "Indramayu"},
+        {"@type": "City", "name": "Kuningan"}
+      ],
+      "sameAs": [
+        "https://www.instagram.com/lipink2003/",
+        "https://shopee.co.id/lipink2003",
+        "https://www.tokopedia.com/giftland"
+      ]
+    }
+    </script>
+
+    <!-- BreadcrumbList Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Beranda",
+          "item": "https://www.parcelcirebon.com/"
+        }
+      ]
     }
     </script>
   </head>
